--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@ coverage.xml
 
 # Django stuff:
 # *.log
-logs/*
+Log/*
 !logs/.keep
 local_settings.py
 db.sqlite3
@@ -138,15 +138,19 @@ docker-*
 *.conf
 *.Dockerfle
 *.pt
+BloomingMind/data/*
 data/*
+model/*
 Core/env/*
 data/image/*
 Dockerfile
 Nginx_Dockerfile_product
 Nginx*
 *Dockerfile
-*.data
+*/data/*
 *.json
+
+
 
 
 # stten setting
