--- a/.gitignore
+++ b/.gitignore
@@ -149,8 +149,14 @@ Nginx*
 *Dockerfile
 */data/*
 *.json
+*/result/*
 
 
 
 
 # stten setting
+/BloomingMind/Log/logs/BloomingMind.log
+/BloomingMind/Log/error_logs/BloomingMind_error.log.2023-04-20
+/BloomingMind/Log/error_logs/BloomingMind_error.log.2023-05-03
+/BloomingMind/Log/error_logs/BloomingMind_error.log.2023-05-09
+/.idea/jupyter-settings.xml
